完成第四章

--- a/带人的技术.md
+++ b/带人的技术.md
@@ -102,4 +102,77 @@
 
 * 将教的内容分为知识和技术
 
-    * 
+    * 在指导下属之前，最好还是先把要教的资料整理好
+    * 先将指导的内容分为“知识”和“技术”两个部分
+    * 把能够回答的当作“知识”，能够尝试去做的当作“技术”就可以了
+    * 只要把计划教授的内容区分为“知识”和“技术”，就能清楚判断教导的先后顺序，以及每一名下属应该学习的内容
+    
+        区分知识和技术，以打保龄球为例
+        知识          | 技术
+        -------------|-------------
+        打球的礼仪       |拿球的方法
+        基本游戏规则      |助跑的方法
+        选球的方法       |丢球的方法
+        积分表上各种符号的意义|控球的方法
+        球的旋转和轨道之间的关系|
+
+* 请问一下你如何请孩子帮你跑腿
+
+    * 孩子第一次出门帮你跑腿时，你会将他应该做的事逐项条列清楚，然后简单易懂地教导他（行为分解）
+    * 面对下属，你也应该这么做
+    * 务必逐一确认每个人都可以想到的事项，甚至是认为没有必要确认或理所当然应该知道的事
+    * 然后针对下属从来没有做过的行为，必须像孩子第一次帮你跑腿一样逐步教导他们
+
+* 彻底分解优秀员工的工作状况
+
+    * 无论哪一种职业，工作内容都是由许多“行为”组成的，只要加以分解并且条列出来，就能知道你应该教授的内容
+    * 分解的对象：能够顺利完成工作创造成果的员工的行为
+    * 因为能够创造成果的员工，必定会采取能够创造成果的行为
+    * 由于工作有各种不同的做法，因此理想的分解方式是，分解数名员工的行为，然后剔除个性化的行为，提取共性的行为
+    * 条列出来的重要项目，则可以当作是确认工作完成的“检查清单”
+
+* 了解下属知道什么？能够做什么？
+
+    * 确认下属对工作的了解以及能力所及的程度
+    * 绝对不要自以为是的认为他应该知道什么，或假设应该做得到
+    * 确认下属“知识”的部分时，可以采取一问一答的方式进行
+    * 确认下属“技术”的部分时，可以采取角色扮演的方式模拟工作的实际情况
+        * 最重要的是根据检查清单，确定“观察重点”
+    * 掌握了下属“了解”和“办得到”的事，然后对照“检查清单”，就能厘清应该指导下属的内容
+
+## 四、怎么教？
+
+* 以具体的语言指示或指导下属
+
+    * “真诚待客”、“确实做好”、“尽早提出”这三个指示的共性是含糊不清而且抽象
+    * 在指示下属采取行动时，把话说得越具体越好，但事实上很多主管说起话来模凌两可
+
+* 具体告知下属应该采取的行动
+
+    * 当你想以语言具体表述行为时，可以参考行为分析学在定义“行为”时说采用的“MORS法则”（具体性法则）
+        * 可测量（Measurable） 可量化
+        * 可观察（Observable） 直观
+        * 可信赖（Relialbe） 可辨识
+        * 明确的（Specifie）无歧义
+    * 如果不能满足上述4项条件，就不能称为“行为”
+
+* 小心使用在公司内经常说的话
+
+    * “如果你不懂就用眼睛学”
+    * “反正要在期限前完成”
+    * “要待客如亲”
+    * “要密切沟通”
+    * “要提升营业额”
+    * “要集思广益”
+    * 你能将平时说使用类似以上的字眼，翻译成具体的行为吗？？？
+
+* 优秀的领导擅长翻译
+
+    * 所谓的翻译，就是将公司高层提出的抽象信息或指令，解释成具体的“行为”，告知第一线的下属
+    * 如果高层提出“我们要成为坚如磐石的组织”，主管也照本宣科大喊“我们要成为坚如磐石的组织”，只会让下属一头雾水，不知道你在说什么
+    * 优秀的管理层都能够自然诠释高层抽象的说法
+
+
+## 五、教到哪里？
+
+* 
