--- a/带人的技术.md
+++ b/带人的技术.md
@@ -170,9 +170,74 @@
 
     * 所谓的翻译，就是将公司高层提出的抽象信息或指令，解释成具体的“行为”，告知第一线的下属
     * 如果高层提出“我们要成为坚如磐石的组织”，主管也照本宣科大喊“我们要成为坚如磐石的组织”，只会让下属一头雾水，不知道你在说什么
-    * 优秀的管理层都能够自然诠释高层抽象的说法
+    * 优秀的管理层都能够自然诠释高层抽象的说法，将它简单易懂地传递给下属
 
 
 ## 五、教到哪里？
 
-* 
+* 将目标换成具体的行为
+
+    * 当你在提出类似口号的目标时，必须具体写出“应该学习的知识”或“必须学习的行为”
+    * 目标的设定不宜过高或过低，设置只要努力或许就可以达成的目标才是最理想的
+
+* 在达成长期目标的过程中设定短期目标
+
+    * 短期目标的难易程度以稍加努力就能达成最好
+    * 这么做有两个好处
+        * 可以得到成就感
+        * 通过逐一达成短期目标，确实走向原本的长期目标
+    * 主管必须和下属一同设定短期目标，让下属朝向目标努力前进
+    * 主管则定期验收成果，只要达成目标便给予赞美
+
+* 无论是教导或是指示下属，每次仅限三件事
+
+    * 教导或指示下属时绝不贪心
+    * 人一次无法记住许多事
+
+* 制作不必要清单
+
+    * 只锁定最重要的两三项工作，其他的不做，这就叫“劣后顺序”
+    * 20%的员工创造80%的业绩，前20%的员工都能自然决定出”劣后顺序“，剩下的80%的员工需要主管明确指示”劣后顺序“
+    * 如果能够制作与”必做“清单相反的”不必做“清单，确认下属没有不必要的工作，这才是最理想的做法
+
+* 除了分内的工作，也要教导下属工作的意义和全貌
+
+    * 在教导下属工作时，必须确实的解释工作的意义，例如“为什么这么做”
+    * 当你希望某人帮你找来石头用来堆砌炉灶时，没有人会不告诉他目的而只是要求他去找石头
+    * 为了让下属了解事情的重要性，必须让他们掌握即将执行的业务的定位和整个计划的意义，也就是计划的全貌
+
+* 不要相信“我懂了”这句话
+
+    * “我懂了”隐藏很大陷阱
+        * 没听懂也不好意思说
+        * 以为自己懂了，事实上是理解错误
+        * 连自己懂了没有都不知道
+    * 确认下属是否真的理解或真的学会了的方法
+        * 请下属重复一次
+        * 请下属交报告
+        * 让下属思考成功和失败的模式
+            * 懂和能做之间有很大的距离
+            * 问：如何运用才会成功？
+            * 问：使用这种方法会失败吗？
+            * 尽可能让下属说明重点和理由
+
+* 将理解转变成可以做到
+
+    * 即使你知道对方希望你这么做，但要实践和持续却很困难
+    * 即使知道“行动”是必要的，也会忍不住偷懒或选择轻松的路走，这是人的天性
+    * 自主性是非常不可靠的东西
+    
+## 六、称赞很重要
+
+* 利用考满分的成功经验支持下属成长
+
+    * 让一个不喜欢读书的五年级小学生做四年级或三年级的测验，这样大部分学生应该都可以考满分
+    * 这样一来，他不仅能够获得成就感，同时也会产生自信，觉得只要自己愿意就一定能够做到
+    * 主管的鼓舞和支持可提高教育下属的效果，最具代表的做法就是交付下属他确实能够完成的工作，以此累计成功的经验
+    * 为了教会那些不知道怎样做事或怎么教都不会的下属，请给他们一份他们一定能完成的工作，帮助他们考满分
+
+* 培养思考能力也需要分解行为
+
+    * 
+
+
