--- a/带人的技术.md
+++ b/带人的技术.md
@@ -238,6 +238,72 @@
 
 * 培养思考能力也需要分解行为
 
-    * 
+    * 如果是为了刺激下属的“思考能力”，你必须将思考的过程分解成一个个的“行为”，让他了解思考的先后顺序并且加以说明
+    * 首先，要让下属利用基本的工作为自己加分，因为这样他就会有自信自己思考。
 
+* 为什么需要称赞
 
+    * 人类行为原理的ABC模式
+        * A先决条件（Antercedent）......采取行动之前的环境
+        * B行为（Behavior）......行为
+        * C结果（Consequence）......采取醒后之后环境产生的变化
+        * ABC之间有明显的因果关系，A同时受到C的影响
+    * 所有行为都建立在类似的因果关系之上，人类的“意志”对这样的因果关系没有太大影响
+    * 如果你想要下属做出或学会某种行为，与其鼓励他们加把劲或振作一点，还不如控制A、B、C之间的因果关系来的有效
+    * 如：扇扇子如果会凉快，大家就会继续扇；吃饼干如果得到很好吃的结果，就会再吃一个
+
+* 如何强化行为
+
+    * 无论是工作还是培养人才，主管希望下属实践或学习的行为，并不会立刻出现明确的结果
+    * 此时，在行为之后，刻意给对方想要的“结果”的做法，就能配上用场
+    * 简单来说，最有效的就是主管的赞美和认同
+    
+* 给不擅长称赞下属的主管的建议
+
+    * 不少企业的主管，都表示自己不擅长称赞下属
+        * 40岁以上的人，那个时代都认为严格管教和斥责之女、学生、下属都是理所当然的事
+        * 只有在成功挑战非常困难的任务之后，才可能获得称赞
+        * 完成日常工作，基本很少有人获得称赞
+    * 称赞下属的目的，是希望强化你希望下属学习的行为
+        * 应该称赞他的行为，而不是人品和个性
+    * 不用搞清楚下属在想什么，重点放在他的行为，认同他的工作成果，确实称赞他就行了
+
+## 七、训斥和生气是两件不同的事
+
+* 为什么可以训斥，但是不可以生气？
+
+    * 愤怒的定义：自己制定的目标和现状之间存在极大的差距，在找不到拉近这个差距的方法时说产生的情绪
+    * 没有人会生婴儿的气
+        * “还有两年就要上幼儿园了，不要在地上爬了，赶快起来学走路”
+        * 如果对婴儿生气，他就不会想站起来走路，因为他觉得这么做你又会生气
+        * 行为分析学将这样的现象解释为“愤怒使行为消失”
+    * 训斥的定义：在必须改善对方行为时，给予提点或要求的行为
+
+* 训斥他人时，该做和不该做的事
+
+    * 绝对不可以拿下属的人格或个性大做文章
+    * 训斥一个人时，要着眼于这个人的“行为”
+    * 必须将问题锁定在“应该做却没有做”和“不应该做却做了”的行为上
+    * 除了训斥外，同时需要告知下属改变行为的方法
+
+* 重点在于谁负责称赞和训斥
+
+    * 如果主管平时能够适当评估下属的行为，让下属觉得是因为在他手下工作而能享受到工作的乐趣；被这样的主管称赞，下属一定会表现积极
+    * 如果主管平时只会抱怨自己的主管和公司，无论是被这样的主管称赞还是批评，下属应该都无法接受
+    * 最根本的问题在于，你自己是不是一个值得尊敬的主管或前辈？
+
+## 八、为了让下属保持良好的表现
+
+*  抛弃动机的神话
+
+    * 不要以“动机”或“干劲”等模凌两可的说法来判断下属的行为，请计算他们行动的次数
+    * 只要拜访的客户数在持续增加，就表示下属有干劲
+    * 如果拜访的客户数在减少，不管当事人怎么说，都表示动机在降低
+
+* 强化教学内容，让下属继续保持
+
+    * 所谓的“强化”，指的是让下属重复某一动作的行为
+    * 如果在采取行动后，得到的结果是自己想要的，当事人就会持续重复这个动作；这是人类的行为原理，这种想象被解释为”行为因为得到想要的结果而被‘强化’“
+    * 所有的结果都是平时各种”行为“累计而成，如果你希望获得某种结果，就只能将以往的行为，确实改变为可创造出结果的“行为”
+    * 如果下属在你的指引下，采取能够创造结果的行为，请务必给予好评
+    * 要持续一个无法获得好评的“行为”，是非常困难的一件事，因此，身为主管的你，给予下属的“评价”影响非常之大
