--- a/带人的技术.md
+++ b/带人的技术.md
@@ -303,7 +303,158 @@
 * 强化教学内容，让下属继续保持
 
     * 所谓的“强化”，指的是让下属重复某一动作的行为
-    * 如果在采取行动后，得到的结果是自己想要的，当事人就会持续重复这个动作；这是人类的行为原理，这种想象被解释为”行为因为得到想要的结果而被‘强化’“
+    * 如果在采取行动后，得到的结果是自己想要的，当事人就会持续重复这个动作；这是人类的行为原理，这种现象被解释为”行为因为得到想要的结果而被‘强化’“
     * 所有的结果都是平时各种”行为“累计而成，如果你希望获得某种结果，就只能将以往的行为，确实改变为可创造出结果的“行为”
     * 如果下属在你的指引下，采取能够创造结果的行为，请务必给予好评
     * 要持续一个无法获得好评的“行为”，是非常困难的一件事，因此，身为主管的你，给予下属的“评价”影响非常之大
+
+* 计算行为的次数，给予正确评价
+
+    * 测量下属采取行动的次数时，最重要的是锁定能创造成果的“行为”，避免计算无关紧要的行为
+    * 如果无法以数据评估这个行为，可将它分为“优／良／普通／差／劣”五个等级
+    * 必须注意，不要让下属与其他员工相互比较，重要的是记录自己针对特定行为所设定的目标达成率
+
+* 利用定期反馈完成指导
+
+    * 下属计算出“行为”的次数，同时做好图表之后，接下来就轮到主管的反馈，确定下属顺利采取了行动，就给予称赞，比如：“你做得不错”
+    * 根据行为分析的实验结果，给予反馈的有效周期长达2周，如果是一个月之后才给予反馈，就完全没有“强化”的效果
+    * 无论怎么忙，反馈都需要按计划进行，如果三天打鱼，两天晒网，会明显削弱“强化”的效果
+    * 只要主管、前辈和下属一同找出可创造成果的“行为”，同时加以记录次数并且给予反馈，下属就能持续的做成这种“行为”
+    * 好处
+        * 由于是下属和主管一起针对共同目的一起努力，同时确实评估结果，因此可以加强双方的互信度
+        * 由于指导的目标明确，所以能确实提升主管培育人才的方法和管理技巧
+
+* 你能够把工作交给下属吗？
+
+    * “辅助”和“撤除”是行为分析学中常用的词
+        * 辅助：辅助对方方便采取某种行动
+        * 撤除：解除辅助
+        * 游泳池的里浮板、儿童单车的辅助轮都是一种辅助
+    * 不要让下属“骑着有辅助轮的单车”到处跑
+    * 持续辅助却不知道何时应该放手，会妨碍下属的真正成长和自立
+
+# 九、这个时候该怎么办？
+
+* 面对任何下属，教法的基础都一样
+    
+    * 指导的重点始终是“行为”
+    * 主管对下属必须常抱尊敬之意
+
+* 年长的下属
+
+    * 不要以主从的身份来看待主管和下属的关系
+    * 把主管和下属当作是所处的位置不同，分别扮演“带领团队给予指示”和“在第一线创造成果”的两个角色
+    * 将年长的下属视为人生的前辈表示敬意
+
+* 二度就业的员工
+
+    * 厘清下属“知道／不知道”和“办得到／办不到”的事，对不知道和办不到的事情加以指导
+    * 彻底执行“劣后顺序”（不需要做的事情）
+    * 把有经验的下属当成咨询的对象，多请教对方的意见
+
+* 因理想和现实的落差而烦恼的新人
+
+    * 说明企业理念和日常业务的关系
+        * 每天工作和公司理念看似毫无关系，事实上却十分密切
+        * 为实现公司的理念，每个部门都必须负担一部分必须达成的任务
+        * 包括你在内的所有员工，每日所采取的行动，都可以提高公司的业绩，公司才可能服务于客户和社会，也才能贯彻理念，实现愿景
+
+* 优秀的员工
+
+    * 无论下属多么优秀，主管如果不闻不问，一定会影响下属的表现
+    * 在没有约束的情况下，能自我管理的人，大约只有3-5%
+    * 以较低的频率检查优秀员工的工作进度
+    * 让优秀员工能够确实感受到自己深受主管信赖，是件非常重要的事
+
+* 兼职和派遣员工
+
+    * 详细说明工作的全貌和兼职人员的定位，让当事人强烈感受到“自己的重要性”
+
+* 外籍员工
+
+    * 一般来说，应该先学习语言和文化，在融入当地的生活之后才正式工作
+    * 重点放在行为上，就能创造工作的成果
+        * 只使用“Yes”、“No”、“Good”、“Bad”四种说法指导工作，营业额提高1.3倍
+    * 可以使用不依靠语言的沟通方式，比如：“视觉支持”
+
+# 十、教导的对象人数较多时
+
+* 在下属的大脑中画空格
+
+    * 演讲一开始，告知演讲的内容是什么，这么一来，参与者就会在脑海中准备几个空格
+    * 参与者一开始接受到经过整理的信息，会更容易理解
+
+* 为什么要写？要写些什么？
+
+    * 重点应该是了解某个概念或学习某种规则，拼命抄写诗与原本的目的毫无关系的“无用行为”
+    * 请下属填写希望他们记住的关键字
+    * 希望下属思考时，可让他们自由发挥，并且写下来
+
+* 石田式研讨会的法则
+
+    * 不要只靠说 
+        * 只说会让与会者觉得厌烦
+        * 充分利用其它信息传递方式
+    * 分别使用讲义和ppt
+        * 使用ppt营造一个“参与”的气氛
+        * 可以看ppt上的图片一起思考，能提高参与感，凝聚向心力
+        * 将讲义的重点整理成ppt
+    * 读与写
+        * 书写非常适合用于记忆重点或思考授课的内容
+        * 读用来帮助学习者吸收知识
+    * 讲述的内容
+        * 需要记忆的重点
+        * 帮助与会者理解教学内容的范例
+        * 依照与会者的行业、职业或阶层提供可供活用的重点
+
+* 提高学习效果的九种方法
+
+    * 引起注意
+        * “我们现在开始”
+        * 欣赏短片方式暖场
+        * 提一个与教学内容有关，但有点突兀的问题，以此提升学习者的好奇心
+    * 提示学习目标
+        * 让他们更专心
+        * 提高学习欲望
+    * 回忆必要的知识
+        * 长期记忆里的知识可自由回忆和运用
+    * 提示学习内容
+        * 人类会将眼睛耳朵接收到的信息，暂时存储在“短期记忆”里，因为容量有限，存储之前会先筛选
+        * 筛选的方法就是只存储对自己有利或需要的信息，其他一概舍弃
+        * 如果希望学习者能记住你希望他记住的事，存储在“短期记忆”中，最重要的是明确凸显相关重点
+    * 提供学习辅导
+        * 协助学习者将“短期记忆”的信息移入长期记忆的方法
+            * 以不同的说法说明
+            * 介绍实际的例子
+            * 连接已知的事物
+        * 此时的重点为“不断重复”和“让刚学习到的信息变得有意义”
+    * 练习
+        * 确认学习者是否正确收到教学的内容
+    * 提供有利的反馈
+        * 通过反馈，让学习者指导自己是否通过练习的考验
+    * 评估学习的成果
+        * 利用考试等方式，确认学习者是否确实记住或学会应该学会的事
+    * 运用所学
+        * 间隔一段时间后反复练习，在各种情况下活用学习成果，有助于加强记忆和运用所学
+
+* 读书会等活动的流程安排
+
+    * 6:3:1原则
+        * 基础60分钟，应用30分钟，发挥10分钟
+    * 90/20/8法则
+        * 参与研讨的人员，能否理解内容的时间平均为90分钟，能够边听边记忆的时间只有20分钟
+        * 研讨的过程不能超过90分钟
+        * 每20分钟就要改变形式或进行的速度
+        * 每8分钟让学员有参与的机会
+
+* 活用照片和图片
+
+    * 大部分主管在教导下属工作的方法或给予指示时，都是利用语言，以口头的方式说明
+    * 根据不同的内容利用图片或照片等视觉数据，让下属更容易理解
+    * 在人种多元的美国，有越来越多的制造业和服务业的第一线，利用“视觉支持系统”来表示工作的流程
+
+
+
+    人为何而活？
+
+    人生存的基础是教育，也就是“人才培养”。
