--- a/带人的技术.md
+++ b/带人的技术.md
@@ -454,7 +454,7 @@
     * 在人种多元的美国，有越来越多的制造业和服务业的第一线，利用“视觉支持系统”来表示工作的流程
 
 
+# 结语
 
-    人为何而活？
-
-    人生存的基础是教育，也就是“人才培养”。
+* 人为何而活？
+* 人生存的基础是教育，也就是“人才培养”
