--- a/项目管理修炼之道.md
+++ b/项目管理修炼之道.md
@@ -1,5 +1,7 @@
 # 项目管理修炼之道
 
+![项目管理修炼之道](images/项目管理修炼之道.jpg)
+
 ## 一、启动项目
 
 ### 1、定义项目和项目经理
@@ -131,14 +133,72 @@
 
 #### 日程总览
 
+* 日程总览里标有主要里程碑
+* 说明里程碑或迭代的持续时间
+* 说明里程碑或迭代结束后可以得到哪些产出
+* 不要放工作分解结构（WBS），可以给参考链接
+  * 工作分解结构：它是任务的组织形式，展示它们之间的依赖、持续时间和所有者等信息
+
 #### 人员配备
 
 #### 建议日程
 
+* 黄色便利贴安排日程
+* 很少使用完整的甘特图
+* 小心过早细化日程
+  * 反复修订项目日程
+  * 随项目进程补充细节
+
 #### 制定项目风险列表
 
+* 要将排名前十的风险记录在案
+* 要经常监控这些风险
+* 适当时机更新这个列表
+
 ### 4、制定发布条件
+
+* 发布条件会告诉你项目中“完成”的含义
+* 避免大家对“完成”的定义各不相同
+* 问题：
+  * 销售人员能够卖出满足条件的产品吗？
+  * 技术支持人员能够为这个产品提供技术支持吗？
+  * 培训人员能否制定培训计划并展开相关培训？
+* 确定当前项目最重要的因素
+  * 客户关注的是这个产品是否解决了困扰客户的问题，而不会考虑其中有无缺陷或是缺陷数量
+  * 有时，发布日期是最重要的
+  * 有时，某一个或几个功能决定了项目的成败
+* 草拟发布条件
+  * 所有代码必须针对所有运行平台编译并构建
+  * 没有高优先级的Bug
+  * 所有未解决的Bug和临时解决方案都要记录在版本发布说明中
+  * 所有计划好的测试都要运行，通过率98%以上
+  * 在最后三周，未解决的缺陷数目要下降
+  * 在发布之前，要由开发人员完成单元测试，由测试组完成系统测试，由客户A、B完成验证
+  * 准备6-1日发布
+  * 所有未解决的缺陷都要由跨职能团队进行评估
+* 让发布条件符合SMART原则
+  * 确定的
+  * 可测量的
+  * 可达成的
+  * 相关的
+  * 可跟踪的
+* 在发布条件上达成多方共识
+  * 草拟发布条件，针对其展开讨论，在团队会议上就其达成共识
+  * 与整个团队草拟发布条件
+  * 与团队各职能经理一起草拟发布条件
+
 ### 5、使用发布条件
+
+* 到产品发布的时候，发布条件职能有“满足”或“未满足”两种状态
+* 要跟团队一起讨论距离满足发布条件还要多久
+* 发布条件可以作为早期的告警信号，让大家知道团队可能无法准时完成当前版本
+* 下列两种情况发生时，项目经理可以考虑变更发布条件
+  * 进一步了解项目中关于“完成”的含义时
+  * 认识到无法在预定发布日期前满足所有发布条件时
+* 如果管理的项目无法满足发布条件
+  * 要跟团队确认为什么无法满足条件
+  * 要向管理层解释无法满足条件的原因
+
 ### 6、小结
 
 * 项目规划是在不断进行的，这只是开始
