--- a/项目管理修炼之道.md
+++ b/项目管理修炼之道.md
@@ -1,4 +1,4 @@
-# 项目管理修炼之道
+# 【项目管理修炼之道
 
 ![项目管理修炼之道](images/项目管理修炼之道.jpg)
 
@@ -130,6 +130,8 @@
 * 明确说明团队在项目中的职责分配
 * 指明项目经理如何使用生命周期组织项目工作，要采纳哪些关键实践
 * 是否有决策人可以影响当前项目
+* 如果使用受时间盒限制的迭代，需要说清楚每个时间盒的长度是多久
+* 如果使用版本火车，要说明每列火车持续多久
 
 #### 日程总览
 
@@ -209,9 +211,70 @@
 
 ### 1、理解项目生命周期
 
+* 生命周期是项目经理和团队组织产品开发的方式
+* 定义需求、设计、开发、测试以及这些工作同时进行的过程，都算生命周期的一部分
+* 从整体上组织项目时，不要把现实情况理想化
+  * 不要在规划时就希望能先产生完整的需求
+  * 选择的生命周期能随着项目的推进不断发现新的需求
+  * 选择的生命周期要有助于识别项目风险，帮助项目经理交付成功的产品
+  * 很少有项目能够沿着需求到发布这样一条直线推进
+  * 也没有多少项目能够规规矩矩按计划进行
+
 ### 2、生命周期概览
 
+各种生命周期如何管理风险：
+
+| 生命周期类型 | 范例               | 优势以及成功的必要条件                              | 项目优先级                | 成功预期               |
+| ------ | ---------------- | ---------------------------------------- | -------------------- | ------------------ |
+| 顺序式    | 瀑布、阶段-关卡式        | 管理成本风险，需求已知并已达成共识，系统架构已被深入理解，项目需求不会发生变化，项目团队不会发生变化 | 1、功能集合，2、低缺陷率，3、发布时间 | 成功，并可得到反馈          |
+| 迭代式    | 螺旋、不断演化的原型       | 管理技术风险，不断演化的需求                           | 1、功能集合，2、低缺陷率，3、发布时间 | 迭代中的任务已经做规划，并按计划完成 |
+| 增量式    | 项目日程由设计决定，并按阶段交付 | 管理日程风险，可以应对小的需求变更，但是难以处理影响到架构的变更         | 1、发布时间，2、低缺陷率，3、功能集合 | 成功                 |
+| 迭代／增量式 | 敏捷（Scrum、XP）     | 管理日程和技术风险，如果团队成员不在同一物理位置，人员智能不完备，就难以实施   | 1、发布时间，2、功能集合，3、低缺陷率 | 成功                 |
+| 即兴式    | 编码并修复            |                                          | 1、发布时间，2、功能集合，3、低缺陷率 | 不可能成功              |
+
+各种生命周期的各阶段表示：
+
+* 顺序式
+  * 需求收集
+  * 分析
+  * 设计
+  * 编码
+  * 集成
+  * 测试
+* 迭代式
+  * 需求收集
+  * 原型阶段：分析、设计、编码
+  * 原型阶段：分析、设计、编码
+  * 原型阶段：分析、设计、编码
+  * 集成
+  * 测试
+* 增量式
+  * 收集部分需求
+  * 分析选择整体架构
+  * 设计、编码、集成、测试
+  * 设计、编码、集成、测试
+  * 设计、编码、集成、测试
+  * 最终集成
+  * 最终测试
+* 敏捷
+  * 收集部分需求和规划游戏
+  * 时间盒
+  * 时间盒
+  * 时间盒
+    * 每个时间盒产生已通过测试并可以运行的功能
+* 生命周期组合创新
+  * 了解初步需求
+  * 将目前了解到的需求原型化，收集反馈，选择技术架构
+  * 完整实现3个功能，并随即进行集成
+  * 测试架构，演示现有功能
+  * 继续实现，并不断集成
+  * 最终集成
+
+
+
 ### 3、在项目中寻求反馈
+
+
 
 ### 4、大规模项目需要组合使用多种生命周期
 
