--- a/项目管理修炼之道.md
+++ b/项目管理修炼之道.md
@@ -73,8 +73,10 @@
 ### 7、理解质量对于项目的意义
 
 * 根据项目产品所处的不同市场应用阶段，客户对于质量的定义也有所差别
+  * 早期市场：关注于独特之处
   * 初期市场：关注于功能，可以容忍缺陷
-  * 大众市场：关注于稳定，不能有过多缺陷
+  * 大众市场：关注于稳定和功能，不能有过多缺陷
+  * 末期市场：客户群体日益增大，尽量要求减少缺陷，项目的压力会更大
 
 ### 8、小结
 * 每个项目启动时都要有章程
@@ -82,7 +84,16 @@
 * 章程不一定完美，他的意义在于帮助整个项目团队进行规划活动
 * 要知道质量的意义以及项目的驱动因素，这样随着项目的不断推进，项目经理和团队才可以做成正确的决策
 
+
+
+
+
 ## 二、规划项目
+
+规划和日程安排是两种不同的活动。
+
+* 规划：是指制订带有发布条件的项目计划
+* 日程安排：是对项目工作的有序描述
 
 ### 1、踏上征程
 
@@ -97,7 +108,7 @@
 * 要根据经验而不是预言来规划项目
   * 先做少量规划，再根据实际收集到的反馈规划将来
   * 预言式规划试图预测未来，这很难奏效，除非你有水晶球
-* 规划好无用处，但是制定规划必不可少
+* 规划毫无用处，但是制定规划必不可少
 
 ### 3、开发项目规划模版
 
@@ -120,10 +131,14 @@
 
 #### 目标
 
-* 产品目标
+* 产品目标（有点费解）
+  * 不在当前发布版本完成的需求
 * 项目目标
+  * 缺陷数目明显减少
 * 团队目标
+  * 增加自动化测试比例
 * 组织目标
+  * 锻炼组织
 
 #### 项目组织
 
@@ -136,16 +151,29 @@
 #### 日程总览
 
 * 日程总览里标有主要里程碑
+
 * 说明里程碑或迭代的持续时间
+
 * 说明里程碑或迭代结束后可以得到哪些产出
+
 * 不要放工作分解结构（WBS），可以给参考链接
   * 工作分解结构：它是任务的组织形式，展示它们之间的依赖、持续时间和所有者等信息
 
+* 以矩阵的方式给出项目团队不同的运作方案
+
+  | 方案            | 实际时间 | 架构时间 | 开发时间 | 测试时间 | 文档时间 |
+  | ------------- | ---- | ---- | ---- | ---- | ---- |
+  | 功能1、2         | 2个月  | 1人月  | 6人月  | 6人月  | 2人月  |
+  | 功能1、2、3       | 4个月  | 2人月  | 10人月 | 10人月 | 3人月  |
+  | 功能1、2、3、4、5、5 | 12个月 | 6人月  | 60人月 | 50人月 | 8人月  |
+
 #### 人员配备
+
+* 要在何时需要多少人，需要何种类型的人
 
 #### 建议日程
 
-* 黄色便利贴安排日程
+* 使用黄色便利贴安排日程
 * 很少使用完整的甘特图
 * 小心过早细化日程
   * 反复修订项目日程
@@ -154,14 +182,29 @@
 #### 制定项目风险列表
 
 * 要将排名前十的风险记录在案
+
 * 要经常监控这些风险
+
 * 适当时机更新这个列表
+
+* 项目风险如果不到10个，不妨和团队成员一起来一次头脑风暴
+
+* 风险列表
+
+  | 序号         | 描述                       | 发生概率   | 严重程度              | 暴露程度       | 反应时间    | 应对计划             |
+  | ---------- | ------------------------ | ------ | ----------------- | ---------- | ------- | ---------------- |
+  | 为每一个风险排定序号 | 用一个短语或一句话为风险命名           | 风险发生概率 | 如果风险发生，会造成影响的严重程度 | 发生概率乘以严重程度 | 应对风险的时间 | 风险应对方案           |
+  | 1          | 除非到了项目的后期，否则不知道算法的速度是否够快 | 中等     | 高                 | （M，H）      | 7-14    | 增加测试人员，和开发人员一起测试 |
+  | 2          | 启动操作2分钟                  | 低      | 高                 | （L，H）      | 8-21    | 在每次构建时监控启动过程     |
 
 ### 4、制定发布条件
 
 * 发布条件会告诉你项目中“完成”的含义
 * 避免大家对“完成”的定义各不相同
-* 问题：
+* 制订发布条件时，先判断项目的关键因素时什么？
+  * 为什么公司要做这个项目？
+  * 为什么客户会买这个产品？
+* 项目经理和各职能部门共同商讨“成功”的含义，为项目经理指明了成功的方向
   * 销售人员能够卖出满足条件的产品吗？
   * 技术支持人员能够为这个产品提供技术支持吗？
   * 培训人员能否制定培训计划并展开相关培训？
@@ -169,31 +212,42 @@
   * 客户关注的是这个产品是否解决了困扰客户的问题，而不会考虑其中有无缺陷或是缺陷数量
   * 有时，发布日期是最重要的
   * 有时，某一个或几个功能决定了项目的成败
+  * 通常来说，日程安排、功能特性、和低缺陷率共同构成项目的关键因素
 * 草拟发布条件
-  * 所有代码必须针对所有运行平台编译并构建
-  * 没有高优先级的Bug
-  * 所有未解决的Bug和临时解决方案都要记录在版本发布说明中
-  * 所有计划好的测试都要运行，通过率98%以上
-  * 在最后三周，未解决的缺陷数目要下降
-  * 在发布之前，要由开发人员完成单元测试，由测试组完成系统测试，由客户A、B完成验证
-  * 准备6-1日发布
-  * 所有未解决的缺陷都要由跨职能团队进行评估
+  * 如果条件许可，要在上市时间、客户需求、缺陷状况、性能和可靠水平之间达到平衡
+  * 注明“草拟”字样，让大家知道只是供讨论的草稿，而不是已经作出的承诺
+  * 发布条件草案样例
+    * 所有代码必须针对所有运行平台编译并构建
+    * 没有高优先级的Bug
+    * 所有未解决的Bug和临时解决方案都要记录在版本发布说明中
+    * 所有计划好的测试都要运行，通过率98%以上（比例可以讨论）
+    * 在最后三周，未解决的缺陷数目要下降
+    * 在发布之前，要由开发人员完成单元测试，由测试组完成系统测试，由客户A、B完成验证
+    * 准备6-1日发布
+    * 所有未解决的缺陷都要由跨职能团队进行评估（讨论有无必要）
 * 让发布条件符合SMART原则
-  * 确定的
-  * 可测量的
-  * 可达成的
-  * 相关的
-  * 可跟踪的
+  * 要确保团队每个人对发布条件的理解完全相同，可以使用SMART原则：
+    * 确定的
+    * 可测量的
+    * 可达成的
+    * 相关的
+    * 可跟踪的
 * 在发布条件上达成多方共识
-  * 草拟发布条件，针对其展开讨论，在团队会议上就其达成共识
-  * 与整个团队草拟发布条件
-  * 与团队各职能经理一起草拟发布条件
+  * 取得共识的过程中，可以提以下问题
+    * 在发布日期之前，我们是不是必须满足这个条件？
+    * 要是我们不能在发布日期之前满足这个条件，会发生什么？
+    * 如果不能满足这个条件，我们的产品或公司是不是会因此而承担风险？人们的安全感是不是会因此被破坏？
+  * 通过以下方式来获得大家共识
+    * 草拟发布条件，针对其展开讨论，在团队会议上就其达成共识
+    * 与整个团队草拟发布条件
+    * 与团队各职能经理一起草拟发布条件
 
 ### 5、使用发布条件
 
 * 到产品发布的时候，发布条件职能有“满足”或“未满足”两种状态
 * 要跟团队一起讨论距离满足发布条件还要多久
 * 发布条件可以作为早期的告警信号，让大家知道团队可能无法准时完成当前版本
+* 在接下来的每周项目团队会议上，用发布条件来确认项目在不断取得进展
 * 下列两种情况发生时，项目经理可以考虑变更发布条件
   * 进一步了解项目中关于“完成”的含义时
   * 认识到无法在预定发布日期前满足所有发布条件时
