第三章完成

--- a/项目管理修炼之道.md
+++ b/项目管理修炼之道.md
@@ -33,7 +33,7 @@
 
 #### 预测未来
 
-* 设想现在离项目预定的交付时间只剩3周，有功能未实现，同时有很多严重缺陷等着修复，问出资人改怎么办？
+* 设想现在离项目预定的交付时间只剩3周，有功能未实现，同时有很多严重缺陷等着修复，问出资人该怎么办？
 
 #### 使用与上下文无关的问题识别项目真正的驱动因素 
 
@@ -261,7 +261,13 @@
 * 为项目团队、出资人和项目经理自己制定发布条件，以及明确定义“完成”的含义
 * 项目规划不必完美无缺，但是必须要有
 
+
+
+
+
 ## 三、使用生命周期组织项目
+
+一旦踏上项目之路，没有哪种生命周期是完美无缺的，可能需要对其做些拓展，并且不时修修补补，所选的生命周期模型要保证足够灵活。
 
 ### 1、理解项目生命周期
 
@@ -271,8 +277,7 @@
   * 不要在规划时就希望能先产生完整的需求
   * 选择的生命周期能随着项目的推进不断发现新的需求
   * 选择的生命周期要有助于识别项目风险，帮助项目经理交付成功的产品
-  * 很少有项目能够沿着需求到发布这样一条直线推进
-  * 也没有多少项目能够规规矩矩按计划进行
+* 很少有项目能够沿着需求到发布这样一条直线推进，也没有多少项目能够规规矩矩按计划进行
 
 ### 2、生命周期概览
 
@@ -280,11 +285,11 @@
 
 | 生命周期类型 | 范例               | 优势以及成功的必要条件                              | 项目优先级                | 成功预期               |
 | ------ | ---------------- | ---------------------------------------- | -------------------- | ------------------ |
-| 顺序式    | 瀑布、阶段-关卡式        | 管理成本风险，需求已知并已达成共识，系统架构已被深入理解，项目需求不会发生变化，项目团队不会发生变化 | 1、功能集合，2、低缺陷率，3、发布时间 | 成功，并可得到反馈          |
-| 迭代式    | 螺旋、不断演化的原型       | 管理技术风险，不断演化的需求                           | 1、功能集合，2、低缺陷率，3、发布时间 | 迭代中的任务已经做规划，并按计划完成 |
-| 增量式    | 项目日程由设计决定，并按阶段交付 | 管理日程风险，可以应对小的需求变更，但是难以处理影响到架构的变更         | 1、发布时间，2、低缺陷率，3、功能集合 | 成功                 |
-| 迭代／增量式 | 敏捷（Scrum、XP）     | 管理日程和技术风险，如果团队成员不在同一物理位置，人员智能不完备，就难以实施   | 1、发布时间，2、功能集合，3、低缺陷率 | 成功                 |
-| 即兴式    | 编码并修复            |                                          | 1、发布时间，2、功能集合，3、低缺陷率 | 不可能成功              |
+| 顺序式    | 瀑布、阶段-关卡式        | 管理成本风险；需求已知并已达成共识；系统架构已被深入理解；项目需求不会发生变化；项目团队不会发生变化 | 1、功能集合；2、低缺陷率；3、发布时间 | 成功，并可得到反馈          |
+| 迭代式    | 螺旋、不断演化的原型       | 管理技术风险；不断演化的需求                           | 1、功能集合；2、低缺陷率；3、发布时间 | 迭代中的任务已经做规划，并按计划完成 |
+| 增量式    | 项目日程由设计决定，并按阶段交付 | 管理日程风险；可以应对小的需求变更；但是难以处理影响到架构的变更         | 1、发布时间；2、低缺陷率；3、功能集合 | 成功                 |
+| 迭代／增量式 | 敏捷（Scrum、XP）     | 管理日程和技术风险；如果团队成员不在同一物理位置，人员职能不完备，就难以实施   | 1、发布时间；2、功能集合；3、低缺陷率 | 成功                 |
+| 即兴式    | 编码并修复            |                                          | 1、发布时间；2、功能集合；3、低缺陷率 | 不可能成功              |
 
 各种生命周期的各阶段表示：
 
@@ -324,19 +329,36 @@
   * 继续实现，并不断集成
   * 最终集成
 
-
-
 ### 3、在项目中寻求反馈
 
-
+* 开发人员首次获得代码的反馈是通过测试完成的
+* 如果测试很晚才集成，这些反馈也是很晚才得到
+* 开发人员得不到反馈，项目经理就很难评估剩余的项目风险、项目的状态以及团队的工作效率
+* 缺少反馈的生命周期（顺序式）被称为“预测式”生命周期
 
 ### 4、大规模项目需要组合使用多种生命周期
 
+* 没有哪种生命周期可以满足所有人的要求
+* 对于大规模的团队或是多个地点展开的项目，可能每个团队都使用自己的生命周期
+
 ### 5、管理架构风险
+
+* 架构风险主要是指团队选择的架构能否满足当前项目的要求
+* 顺序式周期中，最终的集成和测试是在最后发生的，对于架构风险的控制是最差的
+* 项目经理需要随时注意架构能否满足项目要求，这方面发现的越早越好，如果不能及时觉察，整个项目可能因此而功败垂成
 
 ### 6、从瀑布中摆脱出来
 
+* 用迭代来规划所有的工作，包括规划、需求收集和原型化等工作
+* 将产品原型化，并尽早先客户展示，从他们那得到的反馈越多，后面的日子越好过
+* 从项目一开始就加入测试工作
+* 功能要逐个实现，完成后随即进行集成和测试
+
 ### 7、我最钟爱的生命周期
+
+* 尽早向代码库中提交功能代码
+* 除非团队完成了几个功能的开发、测试、集成，否则架构师无法确定下来的
+* 敏捷是首选的生命周期，如果客户没有足够投入、或者团队对敏捷式协作好无兴趣，可以选择阶段式交付生命周期，并用时间盒限制需求收集和架构设计阶段
 
 ### 8、小结
 
@@ -346,7 +368,20 @@
 
 ## 四、安排项目日程
 
+最初的规划只要能让项目启动就可以了。在安排项目日程时，要准备改进规划。在重新规划时，如果需要改变日程，也不必担心。
+
 ### 1、注重实效的项目日程安排
+
+* 你之前的项目规划，足以启动项目了
+* 接下来的日程安排，只要能把项目启动起来，也就行了
+* 既然知道项目会随着时间演变，就没有必要详细安排整个项目的日程了
+* 建议只思考接下来大约一周的事情，然后构建主要的里程碑，并对后续几周的工作进行波浪式日程安排
+* 创建日程时，可以将生命周期用作指导方针，但不是严格的限制条件
+* 日程排定要安排工作任务的顺序，展示它们之间的依赖关系
+* 使用时间盒限制初始规划
+  * 用一个小时制订项目的章程
+  * 用一个小时完成项目的规划
+  * 用一个小时完成日程安排的第一版草案
 
 ### 2、可供选择的项目日程安排技术
 
