第五章完成

--- a/项目管理修炼之道.md
+++ b/项目管理修炼之道.md
@@ -1,4 +1,4 @@
-# 【项目管理修炼之道
+# 项目管理修炼之道
 
 ![项目管理修炼之道](images/项目管理修炼之道.jpg)
 
@@ -387,27 +387,77 @@
 
 #### 自顶向下式日程安排
 
-#### 自顶向上式日程安排
+* 自顶向下式的日程安排通常从里程碑开始
+* 将项目日程分为阶段、迭代或是几大块；把它们华仔白板上或者用便利贴粘在墙上
+* 使用放在墙上的卡片安排日程，每个人把应该由自己完成的任务写在卡片上；然后再用线把卡片连接起来
+* 最底层的任务越小，就越容易估算完成任务所需要的时间
+
+#### 自底向上式日程安排
+
+* 自底向上式的日程安排从特定任务开始
+* 使用增量式生命周期时用自底向上还不错
+* 项目团队成员会从任务中产生里程碑
 
 #### 由内向外式日程安排
 
+* 安排日程前，先画一个思维导图，把所说知道的和项目相关的有关东西都放进去
+* 保证团队成员在一起制订思维导图，否则思维导图不好理解
+
 #### 哈德逊湾式启动
+
+* 运送皮毛的商船，离港后先停留在几海里的位置一段时间，确保不会忘记工具和给养
+* 可以让项目团队先尝试在项目的实际环境中开展某些工作，目的是帮助理解环境；项目经理应该尽量缩短这个过程
+* 使用时间盒来限制哈德逊湾式启动
 
 #### 短期迭代
 
+* 当团队对如何估算任务没有什么把握时，可以使用短期迭代
+* 可以在哈德逊湾式启动后再进行一次短期迭代
+* 使用时间盒限制短期迭代（不要炒作2周），再看看团队能够王恒多少工作
+* 如果团队可以一起进行短期迭代和短期回顾，大家就能更清楚的知道如何安排当前项目的日程
+
 ### 3、用低技术含量工具安排项目日程
+
+* 把任务写在便利贴上，然后在贴墙上，根团队成员一起讨论任务的顺序、任务的分配和风险
+* 便利贴可以让整个团队参与项目的日程安排的讨论，团队也会不断说明对风险的理解，并为项目经理提供掌握项目的有价值信息
+* 项目团队拥有时间表的所有权，它们就会对其负责到底
+* 如果项目经理拥有所有权，这就像是在对团队展开微管理，导致管的太细，而不是管理他们任务之间的依赖关系
 
 #### 使用便利贴安排项目日程的基本技术
 
+* 团队全员参与，每人准备一叠便利纸和笔，准备一个可以粘贴的墙
+* 将主要的里程碑写下来贴在墙上，这样大家可以看到项目的整体结构
+* 让每个人把其所有的任务都写在便利贴上，一个便利贴写一个任务，写完后粘贴在墙上
+* 墙上留一个区域用于粘贴问题和假设
+* 项目团队成员一起讨论事件的顺序、前置条件、假定以及问题
+* 项目经理如果看到很长的任务安排列表，就得问问团队是什么阻碍了他们以并行的方式工作
+
 #### 使用便利贴和箭头安排项目日程
+
+* 箭头可以辅助跟踪依赖关系
+* 方便将结果录入日程安排软件
+* 便利贴掉下来后，更容易知道原来位置
 
 #### 为每一个职能组使用便利贴安排项目日程
 
+* 按职能划分的团队会拖项目后腿
+* 大白版画几条竖线，每条表示一周
+* 使用不同颜色的便利贴表示不同职能组织的不同人的工作状况
+* 同时标明项目的结束时间
+* 按职能组织的项目在结束时会很难受，在项目最需要他们的时候，开发人员却很难全心投入
+
 #### 按功能使用便利贴安排项目日程
+
+* 将每个可交付物用一张便利贴写好
+* 同时写好截止日期
 
 #### 使用便利贴安排项目的好处
 
+* 每个人都要有意识去思考关键路径
+
 #### 基于可交付物的规划
+
+* 使人们思考必须为项目剩下的工作交付哪些东西
 
 ### 4、小结
 
@@ -418,8 +468,158 @@
 
 
 
+## 五、估算工作
+
+任何通过计数或是计算的估算技术，都没有成功使用过
+
+### 1、实用的项目估算方式
+
+* 对比历史数据进行估算
+* Delphi和宽带Delphi方式进行估算
+  * 团队成员各自写下自己的任务列表和时间估算，同时注明自己对项目的预设条件
+  * 团队一起开会，收集任务列表并复查，项目经理汇总
+* 何时不应相信团队的估算
+  * 不是每个人都善于估算，有些人会过于乐观，有些人会过于悲观
+  * 总体来说，不要为任务估算添加过多松散时间，要提供一个估算信心百分比、一个日期范围，甚至可以考虑提供三个日期：最佳状况、最有可能、“墨菲”日期
+    * 墨菲法则：如果某事可能会出错，他就一定会在最不应该出错的时候出错
+* 小心顺序式生命周期的估算陷阱
+  * 如果必须使用顺序式生命周期，是很难对项目做出准确估算的
+  * 可以先动手做一点开发工作，测量完成这些工作需要多长时间
+  * 再看包括多少类似工作量的工作，并通过迭代方式得到估算
+* 使用自信心范围进行估算
+  * 自信心范围图
+* 使用日期范围进行估算
+  * 可以让项目不至于受过早承诺之苦
+* 使用三个日期：最佳状况、最有可能、“墨菲”日期
+  * 最佳状况：在生产甘特图时，最佳状况日期就是工具提供的日期
+  * 最有可能：在最佳状况时间上将一些经验系数、缓冲时间后纳入考虑之中
+  * “墨菲”日期：在最有可能日期之上加上一些经验系数
+* 规划扑克
+  * 让所有团队成员都能参与到估算活动中
+  * 每个人都估算任务的时间，然后讨论接受哪个结果
+  * 用人时而不是人日进行任务估算
+    * 一个很难在一个工作日完成8个小时的工作
+    * 我说见过最好的状况，一天也就完成6个小时的技术工作
+    * 由于各种会议或其他干扰，他们每天最多就能干4个小时的技术活
+* 在估算前用试探性开发收集数据
+  * 把任务拆分成一个一个的小块，每个小块耗时4-6小时
+* 让估算更容易的方法
+  * 记住，估算只是一个大概值
+  * 很多软件开发人员都很乐观
+  * 完成一项任务总是花费比预计更多的时间
+  * 估算小块的工作更容易
+  * 估算建议使用人时
+  * 项目经理和团队需要练习估算并收集反馈
+  * 做好反复估算的准备
+  * 如果项目经理必须遵守某个截止日期，那就什么都别估算了，把所有工作按优先级排序，按优先级开发
+  * 如果任务过大，不容易估算好，可以先试探性开发
+
+
+### 2、用里程碑切分项目
+
+* 用交付物作为里程碑，不要用于功能相关的活动
+
+* 使用基于可交付物的规划来安排任务（而不是与功能相关的活动）
+
+* 将里程碑的结束安排在一周中的周中，哪些完成哪些未完成，可以及时调整
+
+### 3、能够不做哪些事情
+
+* 能够以“不做哪些事情”的方式去思考时很重要的特质
+* 不妨问问管理层“能够不做哪些事情”，如果都得做，那就帮大家澄清了他们的假设
+
+### 4、身背多个项目时的估算
+
+* 不要估算，也不能估算，想都别想
+* 团队中有身背多个项目任务的成员，这个项目必然会延迟，而且项目经理都无法预测会晚多久
+* 项目经理需要和出资人讨论：如果不能在我需要他们的时候提供这些人，那我就不能交付你想要的东西，不能满足你对时间和质量的要求，咱们看看哪些东西是你不需要的吧
+
+### 5、主动安排人们进行多任务
+
+* 有些职位不必专职投入（比如DBA、GUI设计人员）
+* 项目经理可以让他们以周为单位来切换项目，确保一周只做一个项目的工作
+
+### 6、使用波浪式规划
+
+* 波浪式规划就是一个持续不断而且详细的日程安排方法，只覆盖几周的时间
+* 完成一周详细工作安排之后，再继续安排一周详细的工作
+* 使用四周的波浪式规划
+  * 2周的时间太短，无法给我足够信息，难以预见风险
+  * 多余4周容易犯错，并偏离安排工作
+* 只要在项目进行时牢记每个里程碑，项目经理就会发现日程越来越容易维护了，花在上面的时间也就越来越少
+
+### 7、决定迭代的持续时间
+
+* 复杂的项目会有大任务，应该将它们拆分成团队可以在四周或更短时间内完成的小任务
+
+### 8、尽可能使用“小石子”进行估算
+
+* 小石子就是大任务被拆分成的小任务
+* 每个小任务的完成时间不会超过2天
+* 小石子只有“完成”和“未完成”两种状态，不存在所谓百分比
+* 基于每天或每周规划的“小石子”是有用的
+* 不要在项目一开始就定义所有小任务，毫无意义
+* 项目中的每个人都可以划分自己的“小石子”
+* 项目经理、技术带头人或架构师不要试图去为别人产生小石子（可以指导），这样就管的太死，陷于“微管理”
+
+### 9、小结
+
+* 绝对不要提供确定的项目结束日期
+* 任务越小、估算起来就越容易
+* 寻求估算的准确性，而不是精确性
+  * 准确性：估算离实际情况有多大的差距
+  * 精确性：测量的精密程度（比如某一天的几点完成）
 
 
 
+## 六、识别和避免日程安排游戏
 
+即使项目经理自己努力做好估算、规划和日程安排工作，你遇到的出资人、管理层、和团队成员还是有可能视日程安排为儿戏；项目经理需要把这些人带回现实。
+
+### 1、给我一块石头
+
+* 当出资人希望项目能更快交付，但是不告诉你何时需要或为什么的时候，就是在玩“给我一块石头”的游戏
+* 应对实践
+  * 提几个问题：日程、人员、功能、品质，什么是最重要的
+  * 找出是什么原因促成他们期望的截止日期
+  * 让出资人明白你做出选择以及背后的原因
+  * 为你提供的日期说明信心范围
+  * 在提供日期时要说明发布条件
+* 反复发生的应对实践
+  * 制订排好优先级的产品待办事项列表
+  * 按优先级逐个实现功能
+    * 如果让出资人更多的了解项目进程，他们就不会那么纠缠截止日期了
+  * 使用短小的时间盒，这样出资人就可以看清项目进程
+    * 如果每隔几周就能展示项目有价值的进展，截止日期就没那么重要了
+
+### 2、“希望”是我们最重要的策略
+
+* 仅有希望，不足以交付一个成功的项目
+* 应对实践
+  * 识别风险并记录下来
+  * 不到万不得已，不要选择瀑布式生命周期
+  * 可以用“哈德逊湾式启动”看看是不是能够做出什么东西
+  * 确保大家具备相关的技术能力，还有解决问题必备的领域知识
+  * 考虑所有工作都采取迭代的方式进行，特别是项目规划和日程安排
+  * 由于缺少经验和专业知识可以寻求相关领域的帮助和信息
+  * 制订里程碑条件
+  * 使用有时间盒限制的迭代
+  * 使用速度图表来展示项目进度
+
+### 3、拒绝女王
+
+* 有些老板不愿意面对项目延期的现实
+* 应对实践
+  * 找出拒绝的原因，可以尝试问一些上下午无关的问题：“对于这个项目来说，要怎样才算成功？”
+  * 写下项目的风险及其潜在影响
+  * 展示你能做的事情，并测量团队在项目中的实际开发速度
+  * 保证参与项目工作的每个人都有相关领域的知识
+  * 如果管理层认为“拒绝”是鼓励团队的方式，建议他采取其他鼓励技巧
+  * 只要项目经理能够接受现实，“拒绝女王”就不一定能造成灾难
+  * 现实总是会在某个时候跟“决绝女王”面对面，这不可避免
+* 反复发生的应对实践
+  * 制订排好优先级的产品待办事项列表
+  * 按优先级逐个实现功能
+    - 等到“拒绝女王”如梦初醒，团队也完成了若干高优先级的功能，这样项目经理也会得到一些有价值的东西
+  * 使用短小的时间盒，这样出资人就可以看清项目进程
 
