第六章完成

--- a/项目管理修炼之道.md
+++ b/项目管理修炼之道.md
@@ -623,3 +623,162 @@
     - 等到“拒绝女王”如梦初醒，团队也完成了若干高优先级的功能，这样项目经理也会得到一些有价值的东西
   * 使用短小的时间盒，这样出资人就可以看清项目进程
 
+### 4、把灰尘扫到地毯下面
+
+* 优先级的变更 — 灰都被扫到地毯下面了
+* 应对实践
+  * 把某个版本需要的功能先按优先级进行排序
+  * 使用有时间盒限制的迭代逐个实现各功能
+
+### 5、幸福日期
+
+* 善于口舌的管理层，他们威逼、利诱、或用权力来说服项目经理和团队，让他们相信可以满足管理层对“幸福日期”的要求（加上逃避困难话题的文化使团队更容易接受）
+
+
+* 应对实践
+  * 说明日程安排范围
+  * 使用迭代式生命周期，并说明将会通过信息方位实现哪些功能
+  * 使用速度图表让每个人都了解进度
+
+### 6、屁股着火
+
+* 项目经理和团队周旋于几个项目之中，或是在两个项目之间不停切换，所有项目的紧急程度不断攀升、攀升、攀升。。。
+* 应对实践
+  * 考虑创建单一项目的工作环境
+
+### 7、分散注意力
+
+* 如果管理层无法把精力投入到一个项目或是项目群之中，就会引发此游戏
+* 应对实践
+  * 为每个项目设定一周的迭代，并确保每个迭代结束时有可发布的产品
+
+### 8、日程等于承诺
+
+* 日程安排只是估计而已，并不是预言，但是有些出资人会将这个估计视为承诺
+* 应对实践
+  * 当出资人要求得到承诺时，可以用信心水平与他们沟通
+    * 比如90%的信心8-1号发布，100%的信心10-1号发布
+  * 交付日期渐进法
+    * 下半年交付 -> 某个季度 -> 某个月 -> 某天
+  * 使用有时间盒限制的迭代，同时使用按优先级排序的待办事项列表
+    * 迭代周期2-4周
+    * 每个迭代的成果都可以投入使用
+    * 可以应对任何时间的发布要求
+    * 项目经理需要从出资人那得到承诺，需要说明哪个需求在何时需要
+
+### 9、到了之后，我们会知道身处何方
+
+* 出资人不停的改变项目的目标，当管理层无法或不想决定产品的方向时，这个游戏就发生了
+* 应对实践
+  * 确定已有的项目愿景、项目目标和发布条件，并就其达成一致
+  * 如果出资人不愿意定义愿景，那项目经理就承担起这个责任，完成之后把它公布出来，并坚守这个愿景；如果做不到，就赶紧结束这个项目，再用新的目标启动新的项目
+  * 用迭代来组织项目，如果已经达成足够多的目标，就结束这个项目，再启动新的项目
+  * 不要允许别人让你的项目失去方向，否则只能发现自己陷入一片迷茫
+
+### 10、日程安排工具总是对的（梦幻时间日程）
+
+* 出资人希望在项目的第一周就看到甘特图，然后一切按部就班进行（关键路径永远保持不变）
+* 原因：决策层看到的大部分报表都是由已完成的工作构成，而项目日程时对工作未来进程的猜测
+* 应对实践
+  * 制订波浪式规划
+  * 使用低技术含量的日程安排技术，比如黄色便利贴
+  * 提供带有信心水平的估算代替甘特图
+  * 使用有时间盒限制的迭代，而且每次只规划一个迭代能做的工作
+  * 用速度图表测量团队的开发速度
+
+### 11、我们必须拥有这个功能，否则就完蛋了
+
+* 出资人提出新的急迫的、重要的额外新功能，项目经理和团队也同意在当前版本加入；只是额外新功能的加入，会导致项目失去按日程交付的希望
+* 应对实践
+  * 要求改变功能集合
+    * 看看哪些功能是这个版本不需要的
+  * 要求更多的时间
+    * 如果你愿意推迟交付时间，我们可以考虑加入这个功能
+  * 如果按功能逐个实现，而且按期提供可供发布的产品，项目经理就可以和出资人重新安排下个版本要实现功能的优先级，使用不超过4周的迭代，人们最久只需要等8周就可以得到新功能
+
+### 12、我们不能说“不”
+
+* 当你开始更团队成员讨论这个新功能带来的影响时，大家都不愿意说“不”，大家两眼一闭，就把新工作接下来了，没有去评估对当前工作的影响
+* 应对实践
+  * 询问团队成员，看他们能否针对新加的额外功能制订计划
+  * 如果项目团队说，“这次就忍了，会加班完成”
+    * 可以考虑加班一周，看看工作效率如何，疲劳程度怎样，缺陷率有无提高
+  * 有时可以加入额外的人力来做更多的工作（不一定总好使）
+    * 如果组织中有人具备领域专业知识，而且团队也希望有这些人加入，可以考虑加入
+    * 不要加入对产品或团队不了解的人
+  * 如果以上方法都不起作用，项目经理就要帮助团队说“不”
+    * 用数据来抵消团队的内疚或是反驳完成公司要求的渴望
+    * 速度图表和迭代内容图表在这里特别有用
+  * 如果项目经理不能帮助团队学会说“不”，那大家就踏上了死亡征途
+
+### 13、日程小鸡
+
+* 项目经理问大家进展情况如何，每个人都说自己在按日程安排进行，而实际情况却是没有一个人做到
+* 应对实践
+  * 避免逐个进行的进度报告会议
+    * 每日站立会议
+    * 每周一对一会议
+    * 每周的电子邮件进度报告
+  * 将任务分解成更小的部分，这样每人每天都能交付一、两小块任务
+  * 按功能逐个实现
+    * 如果有更多的人把精力集中在一小块可交付的功能上，就可以尽快完成这个功能，而且人们也更容易看到自己取得的进展
+  * 考虑使用短期迭代
+    * 就不必坐下来开每周的小组项目进度会议了
+    * 有了每日站立会议，人们就不能掩饰自己的真实进度了
+
+### 14、90%完成状态
+
+* 很多技术工作者对估算并不在行，在任何情况下，但有成员以为自己完成了90%的任务，而实际还有90%的工作尚未完成时，“90%完成状态”就发生了
+* 应对实践
+  * 帮助大家定义出自己的“小石子”
+    * 可以跟对方坐在一起，然后提问：“要完成这项任务，你需要多久？这周要处理的细分任务都有哪些？”
+  * 要让大家把自己的工作进度展示给你
+    * 代码中所有的覆盖情况
+    * 风险列表
+    * 测试用例
+  * 教给大家如何跟踪自己的估算
+
+### 15、我们马上会变得更快
+
+* 项目经理一直在测量团队的开发速度，可是项目进展速度没有达到预期，由于某些原因，团队成员对于如期交付很乐观
+* 应对实践
+  * 与项目团队成员讨论紧张速度
+    * 收集数据，什么原因让他们认为接下来可以更快
+  * 测量估算质量因子
+    * 每隔一段时间问团队成员“你们认为项目什么时候可以完成”，团队就预期时间达成一致，记录这个时间
+  * 测量团队所做的每一件事，确定每个人都全力投入到项目中
+  * 如果项目涉及到硬件组件、要测量其挣值
+    * 计划值(PV，Plan Value)，又叫计划工作量的预算费用(BCWS，Budgeted Cost for Work Scheduled )。是指项目实施过程中某阶段计划要求完成的工作量所需的预算工时（或费用）。
+      * 计算公式是：`PV=BCWS=计划工作量*[预算定额]`
+      * PV主要反映进度计划应当完成的工作量，而不是反映应消耗的工时或费用。
+    * 实际成本（AC，Actual Cost），又叫已完成工作量的实际费用（ACWP，Actual Cost for Work Performed）。指项目实施过程中某阶段实际完成的工作量所消耗的工时（或费用）。主要反映项目执行的实际消耗指标。
+    * 挣值（EV，Earned Value），又叫已完成工作量的预算成本（BCWP，Budgeted Cost for Work Performed）。指项目实施过程中某阶段实际完成工作量及按预算定额计算出来的工时（或费用）。
+      * 计算公式是：`EV=BCWP=已完成工作量*预算定额`
+    * 进度绩效指标（Schedule Performed Index）。指项目挣值与计划值之比。
+      * 计算公式是：`SPI=EV/PV=BCWP/[BCWS]`
+      * 当SPI>1时，表示进度超前
+      * 当SPI=1时，表示实际进度与计划进度相同
+      * 当SPI<1时，表示进度延误
+
+### 16、令人恍惚的日程
+
+* 下周二，总部的大人物就要来视察了，或10个星期后就需要在展会上做演示，不管怎样，你要面对一个不可改变的日期，一系列充满也行或是不可能实现的功能集合
+* 应对实践
+  * 首先创建项目的仪表板（dashboard详见11章）
+  * 测量进度
+  * 测量速度
+  * 如果还没有使用迭代式开发，把剩下的项目分解成迭代，迭代时间越短越好
+    * 每个迭代要完成某个功能或一组功能
+    * 包括功能的开发、文档、测试，以及其他产品对于“完成”的要求
+  * 在一个迭代中要集中精力
+    * 不要让团队成员受其他项目、未来工作或是技术债务干扰
+  * 按功能逐个实现
+    * 这样可能会产生不完整的系统架构，不过不必担心，如果一个功能需要架构提供某些方面的支持，团队会去实现的
+    * 如果功能上不需要，那就没人会用它
+
+### 17、小结
+
+* 日程安排游戏总会发生，项目经理的工作就是要识别它们，然后管理项目，让项目仍然可以取得成功
+* 绝大多数情况下，人们玩这些游戏都不是出于恶意
+* 即使没有恶意，日程安排游戏还是会拖项目后退，使其停滞不前
+* 如果能够以不超过4周的时间来组织项目，按功能逐个实现，随进度集成，并测量进展速度，就可以完全避免绝大多数日程安排游戏
