--- a/项目管理修炼之道.md
+++ b/项目管理修炼之道.md
@@ -2,6 +2,8 @@
 
 ![项目管理修炼之道](images/项目管理修炼之道.jpg)
 
+
+
 ## 一、启动项目
 
 ### 1、定义项目和项目经理
@@ -366,6 +368,8 @@
 * 不要怯于创建反应你自己项目实际情况的生命周期。“完美的”生命周期只是模型而已，你是生活在现实世界中的
 * 阶段-关卡流程或瀑布式生命周期，只有在确定使用它可以获得成功时才使用，而不是不经思考，上来就用
 
+
+
 ## 四、安排项目日程
 
 最初的规划只要能让项目启动就可以了。在安排项目日程时，要准备改进规划。在重新规划时，如果需要改变日程，也不必担心。
@@ -569,6 +573,8 @@
 * 寻求估算的准确性，而不是精确性
   * 准确性：估算离实际情况有多大的差距
   * 精确性：测量的精密程度（比如某一天的几点完成）
+
+
 
 
 
@@ -782,3 +788,44 @@
 * 绝大多数情况下，人们玩这些游戏都不是出于恶意
 * 即使没有恶意，日程安排游戏还是会拖项目后退，使其停滞不前
 * 如果能够以不超过4周的时间来组织项目，按功能逐个实现，随进度集成，并测量进展速度，就可以完全避免绝大多数日程安排游戏
+
+
+
+
+
+## 七、创建出色的项目团队
+
+项目经理要创建一个出色的项目团队，需要两个步骤，首先要招聘或引进所有需要的人才，其次要发挥他们的能力，一起工作，成为高效的团队
+
+### 1、招募需要的人
+
+* 团队中应该有下面这些角色
+
+  | 名称    | 项目中的角色                  |
+  | ----- | ----------------------- |
+  | 架构师   | 组织并指导整个系统的开发，包括测试系统     |
+  | 开发人员  | 设计、编写产品代码               |
+  | 测试人员  | 设计、编写测试，包括测试代码          |
+  | 技术文案  | 设计、编写产品文档               |
+  | 业务分析师 | 收集、编写需求                 |
+  | 发布工程师 | 设计、编写、维护系统，包括与系统相关的任何脚本 |
+  | 项目经理  | 组织项目工作                  |
+
+* 项目可能还需要其他角色（比如UI设计师、固件开发人员），项目经理应该知道项目中的技术风险何在，以确定哪些角色是必需的
+
+* 如果项目经理没有吸引、招募或淘汰团队成员的权利，那失败几乎无可避免
+
+* 小心只会用PPT的架构师
+
+  * 不是每个项目都需要架构师
+  * 如果架构师喜欢画各种设计图，不愿意写代码，开发人员想知道如何把设计结果融入到现有结果中，他也无法给出实质回答，那此人不算是一名真正的架构师
+  * 架构师就像一只海鸥，突然出现，扔下一堆用PPT展示的不知所云的架构图，就像海鸥排下的粪便，然后就迅速离开了
+
+* 项目的风险越大，团队的多样性就应该越丰富
+
+
+### 2、形成团队凝聚力
+
+* 帮助形成一体的最佳方式，就是让他们一起工作，而不是去参加什么团队拓展活动
+* 如果大家有同一目标，彼此承诺完成相互依赖的任务，而采取商定好的工作方式，这就是一个团队
+* 如果希望团队凝结在一起，那么就帮助他们制订一些只有共同工作才能完成的短期目标吧
