--- a/项目管理修炼之道.md
+++ b/项目管理修炼之道.md
@@ -826,6 +826,166 @@
 
 ### 2、形成团队凝聚力
 
-* 帮助形成一体的最佳方式，就是让他们一起工作，而不是去参加什么团队拓展活动
-* 如果大家有同一目标，彼此承诺完成相互依赖的任务，而采取商定好的工作方式，这就是一个团队
-* 如果希望团队凝结在一起，那么就帮助他们制订一些只有共同工作才能完成的短期目标吧
+* 帮助团队形成一体的最佳方式
+  * 就是让他们一起工作，而不是去参加什么团队拓展活动
+  * 如果大家有同一目标，彼此承诺完成相互依赖的任务，而采取商定好的工作方式，这就是一个团队
+  * 如果希望团队凝结在一起，那么就帮助他们制订一些只有共同工作才能完成的短期目标吧
+* 好工具让团队游好的发挥
+  * 软件配置工具
+    * 代码分支
+    * 打标签
+    * 自动合并
+  * 缺陷跟踪系统
+    * 优先级
+    * 严重程度
+    * 缺陷状态
+    * 缺陷持续时间
+* 团队发展的5个阶段
+  * 组建期
+    * 刚刚组建
+  * 激荡期
+    * 团队开始共同工作并彼此试探的时候
+  * 规范期
+    * 团队可以让彼此就大家的行为形成一致意见
+  * 表现期
+    * 团队可以工作干的不错，当大家更加紧密地协作时
+  * 中止期
+    * 项目完成，这个团队也就完成了历史使命
+* 要想让你和同事可以协同工作，我所知道最佳方式，就是将所在团队的项目经理看作自己人，即使管理层并不鼓励这么做
+
+### 3、让组织配合你的工作
+
+* 为完成项目，最有效的组织会根据项目来打造组织机构，在这样的机构中，跨职能团队会向项目经理报告，项目经理管理每天的工作，管理团队和其他部门互动
+
+* 实际上大多数项目经理都服务于职能组织或是矩阵组织
+
+  | 团队组织方式 | 项目经理的权力 | 交付速度 |
+  | ------ | ------- | ---- |
+  | 项目团队   | 大       | 快    |
+  | 矩阵团队   | 中       | 中    |
+  | 职能团队   | 小       | 慢    |
+
+* 在非项目型组织中，项目经理很难帮助团队形成凝聚力
+
+  * 每个团队成员都要对单一职能团队负责，同时要对项目团队负责
+  * 解决之道：团队成员先对项目负责，然后对职能经理负责
+
+* 以项目经理的方式管理单一职能团队（各职能组都有职能经理）
+
+  * 每个职能项目经理领取一些功能或是一系列需求，并使用跨职能团队来完成项目
+
+* 管理矩阵式项目团队（团队每个人都有职能经理，而你还是他们的项目经理）
+
+  * 为他们分配任务，并确保任务可以完成
+  * 职能经理可能会觉得可以让下属参加多个项目
+  * 项目经理需要和职能经理讨论多项目带来的延迟
+
+* 管理跨职能项目团队
+
+  * 要知道团队每个人的工作方式，这样才能提供有价值的反馈，并予以指导
+  * 你不直接管理每一个人，你的下属项目经理和技术带头人就必须知道如何给出有效的反馈和指导
+
+### 4、对必需的团队规模了如指掌
+
+* 多于6人的团队建议拆分成几个小组，每个小组指定一个技术带头人
+* 项目经理最多可以管理不超过9个人的团队
+* 多于9人团队的问题
+  * 团队的气氛会发生变化
+  * 团队成员之间的关系并不紧密
+
+### 5、知道何时应该加人
+
+* 改变人员结构，团队会至少因此回退到震荡期，甚至可能回道组建期
+* 如果雇佣新人，建议专门指定一个“伙伴”来辅导新人
+* 项目刚启动，项目经理应该尽快加入需要的人手；每次人员变动都会对团队的工作效率产生影响
+* 项目进行到中期，向进度落后的项目增加人手，只会使进度更加落后
+* 项目快结束时，要避免新增人手，除非当前人手亿无法完成项目
+
+### 6、成为出色的项目经理
+
+* 提升人际交往技能
+  * 倾听技能
+    * 倾听团队的言谈、从他们那里了解项目的状态
+  * 谈判技能
+    * 争取资源、交换资源和信息
+  * 写作技能
+    * 编写计划，让每个人都理解计划并且做出妥协
+  * 以目标为导向
+    * 帮助大家把注意力放在项目目标上
+  * 了解和尊重项目相关的工作人员
+    * 要能看出别人什么时候陷入困境，什么时候出了问题，什么时候一切正常
+  * 能够适应应对信息不足的状况，并且做出决策
+  * 能够管理细节
+  * 解决问题的技能
+    * 哪些问题必须解决
+    * 哪些问题可以延迟
+    * 如何解决问题（三种备选方案原则：一种是陷阱、两种备选方案是两难的困境，提供三种备选方案，可以让相关人员开始考虑该怎么做）
+  * 辨别、寻找进度的障碍，并清楚它们
+  * 掌控项目的能力
+    * 观察目前状况，指出项目当前方向与你最初的规划有何不同，并可以引导项目进入新的状态
+* 提供功能性技能
+  * 了解问题和解决方案的专业知识
+  * 不要试图遮掩自己技术上的不足，敢于承认自己的不足，雇佣聪明人
+  * 理解不同生命周期模型，知道哪一种最适合你的项目
+  * 能够安排项目的日程规划
+  * 能够估算任务，或者指导其他人完成任务估算
+  * 知道如何评估风险、管理风险
+  * 清楚如何度量项目状态，以及如何报告项目状态
+  * 知道如何处理已完成和未完成的工作（速度图标和挣值）
+* 提升专业领域技能
+  * 理解人们如何收集和排序需求
+  * 知道如何了解设计是否完成
+  * 如何评估技术风险和日程风险
+  * 知道软件配置管理系统的作用以及如何有效使用
+  * 知道测试人员能够提供什么信息
+  * 帮助项目团队选出最适合当前项目的审核活动
+* 项目经理应该了解多少技术
+  * 避免两种极端
+    * 一无所知的项目经理
+      * 要理解项目的流程，还要知道足够关于产品和工具的知识
+      * 否则不能评估风险
+    * 想成为架构师的项目经理
+      * 会致项目经理的工作与脑后
+* 项目经理需要PMP认证吗？
+  * 不需要
+  * 认证只能证明你很善于考试并且有些项目经验，并不能说明你在管理这些项目时有多么成功
+
+### 7、知道何时该全身而退
+
+一名出色的项目经理知道什么样的组织、团队和产品不适合自己
+
+* 什么样的组织不适合你
+  * 你不能选择团队成员
+  * 出席会议变成行政任务
+  * 出资人让你不得好死
+    * 识别命令与控制式的环境，协作式的环境时绝大部分项目成功的必要条件
+  * 出资人坚持认为人们都应该同时处理多个任务，而且不愿意做出改变
+  * 别人想让你承担一些开发工作
+    * 如果项目多于4个人，不建议这么做
+    * 我看到的情况是项目经理没有管理项目，他们在编写代码，但是没有管理风险，没有留意开发、测试进度，没有产生仪表板上的数据，也没有评估版本发布条件，没有帮助大家看清目标、移除障碍
+    * 你没有时间从事技术工作，得不偿失
+  * 管理层强制切分项目工作
+    * 开发测试被切换为两个项目组
+  * 项目在启动时面临资源不足
+  * 你总是听见人们所“你没法融入团队”
+    * 如果你为了项目成功而推行的做法得不到认同，也许这个组织根本不需要你
+* 什么样的团队不适合你
+  * 对于管理项目需要的信息了解不足
+    * 你知道团队时如何工作的吗？
+    * 你明白这个项目是图解决什么样的问题吗？
+  * 你的管理层非要给团队施加帮助，可你无法拒绝
+    * 要敢于做团队的挡箭牌，让管理层的“帮助”落在你身上，而不是团队身上
+  * 对于管理项目的需要的信息了解过多
+    * 项目用到的技术你非常熟悉，能做到不去管技术，全心全意管理项目吗？
+    * 干扰其他资深开发人员的技术工作，会让他们感到沮丧
+    * 你也无法移出障碍、管理风险，更不用说帮团队完成项目了
+
+### 8、什么样的产品不适合你
+
+* 你不具备解决方案领域的专业知识，同时其他人也没有
+
+### 9、小结
+
+* 项目风险越大，团队的多样化程度就应该越高
+* 提升多方面技能：人际交往技能、功能性技能、领域技能和非技术技能
+* 知道何时应该离开
