--- a/项目管理修炼之道.md
+++ b/项目管理修炼之道.md
@@ -989,3 +989,139 @@
 * 项目风险越大，团队的多样化程度就应该越高
 * 提升多方面技能：人际交往技能、功能性技能、领域技能和非技术技能
 * 知道何时应该离开
+
+
+## 八、掌控项目
+
+项目经理已经编写了项目章程，也有了相应的规划，团队知道“完成”的含义，也有了项目的日程。大家的工作正常进行着，做为项目经理，你的职责就是掌控项目，使其达到成功的彼岸。
+
+### 1、掌控项目的节奏
+
+* 下面是常见的打断项目正常节奏的问题
+
+  * 不知道先要完成那些需求
+  * 允许项目的需求收集阶段持续过长时间
+  * 允许GUI随时发生变化，而GUI开发人员在项目中不知如何是好
+  * 没有架构的整体描述，不知道各个部分如何构成
+  * 无法及时向项目中加入必要的人员，使得他们很难取得成功
+
+### 2、举行中途回顾 
+
+* 了解项目中发生了什么，同时为未来的项目做准备
+* 可以在每个迭代结束时举行回顾
+
+
+### 3、为需求排序
+
+* 可以避免“超高”优先级的需求
+
+* 从1开始为每个需求分配一个唯一的数字
+
+* 排序方法
+
+  * 两相对比
+  * 按评判标准排定优先级
+    * 功能对架构的影响
+    * 估算的实现时间
+    * 该功能对于特别重要的客户的重要性
+    * 特定人员实现或测试该功能的可行性
+
+  | 评判标准             | 权重   | 方法1得分 | 方法1权重得分 | 方法2得分 | 方法2权重得分 |
+  | ---------------- | ---- | ----- | ------- | ----- | ------- |
+  | 功能对架构的影响         | 1    | 10    | 10      | 3     | 3       |
+  | 估算实现时间           | 4    | 3     | 12      | 10    | 40      |
+  | 该功能对于特别重要客户的重要性  | 8    | 1     | 8       | 10    | 80      |
+  | 特定人员实行或测试该功能的可行性 | 2    | 10    | 20      | 7     | 14      |
+  | 合计               |      |       | 66      |       | 137     |
+
+* 制订并维护不断变化的需求日志：产品待办事项列表
+
+
+### 4、用时间盒限定需求相关工作
+
+* 用时间盒限制初始的需求相关活动，并持续收集更多的需求
+  * 避免需求分析和定义过程占用过多项目时间
+* 用时间盒限制所有的需求定义活动
+  * 可能会招惹来“你是一个没有团队精神的人”之类的废话
+
+### 5、将迭代限制在4周或更少的时间内
+
+* 长期的迭代会掩盖问题
+* 短时间迭代会让问题暴露的更加明显，项目经理就可以着手解决
+
+### 6、使用波浪式规划和日程安排
+
+* 用迭代的方式反复规划，就可以提升项目日程安排的准确性
+* 先定义出主要里程碑，确保团队明白里程碑的特定含义
+* 项目经理要做的就是监控项目进度，牢记里程碑的验收条件
+* 团队一完成手上的任务，项目经理就可以向当前详细规划中添加新任务
+* 如果后续阶段所费时间超出预期，就是存在技术债务的警讯
+* 研究性项目或项目的研究阶段不适用
+
+### 7、创建跨职能团队
+
+* 各自为战使我们一叶障目，不见泰山
+* 跨职能团队的工作效率更高
+  * 不再把工作在各人之间传来传去，不在各自为战
+* 跨职能团队具有多样性
+
+### 8、根据项目的风险选择生命周期模型
+
+* 根据你们的风险选择生命周期模型，选择哪些实践要考虑团队和所选生命周期的现实情况
+
+### 9、保持合理工作时间
+
+* 每天晚上都在公司吃晚餐好无道理，对任何人都是如此
+* 一般来说，人们加班越多，他们能完成的工作反而越少
+  * 人们每天最多只能完成6小时的技术工作
+  * 在较短的时间内，有些人可能每天能多干1-2小时
+  * 大多数人都不能进行长时间加班
+  * 长时间加班会扰乱一个人的节奏，会让他把更多时间花在喝咖啡、打电话、浏览网页等和工作无关的事情上
+
+### 10、使用“小石子”
+
+* 如果要耗费很长时间才能完成一个任务，项目就会丧失节奏
+* 团队成员看不到人物结束的时候，他们就会变的懈怠，从而没有节奏感
+* 小石子可以帮助每个人保持自己的节奏，并让项目不致偏离正轨
+* 通过指导团队成员使用“小石子”估算任务，或是使用有时间盒限制的迭代，就可以控制“学生综合症”
+  * 学生综合症：直到最后一刻，有时甚至超过了这个时刻，才开始某个任务的工作
+
+### 11、管理干扰
+
+* 干扰是我们的障碍
+* 应对其他项目的干扰
+  * 要推迟来自其他项目对团队的干扰，除非当前迭代结束
+* 应对其他人的干扰
+  * 项目经理要鼓励团队成员及时讨论项目相关问题，项目工作会因此取得进展
+  * 鼓励大家结对编程，这样人们就可以共同学些和了解系统
+  * 可以让团队成员在隐秘的空间中讨论，从而不影响其他人
+* 应对来自运营的干扰
+  * 调出几个开发人员，用1-2周时间专门负责运营工作，并在运营期间调换这些人
+  * 假定每个人每周只有2-3天开发时间，其他时间处理突发事件
+  * 加入更多人手，专门负责运营，第二职责才是项目中的任务
+  * 成立一个运营小组
+  * 估算运营工作，然后将其加入到产品的待办事项列表之中
+
+### 12、管理缺陷，从项目初就开始
+
+* 如果项目经理不在项目初期就开始管理缺陷，那缺陷就会反过来控制你
+* 为每个缺陷定义严重程度和优先级
+  * 严重程度：属于问题的技术层面，如果程度很高，系统就无法运行，要么就回提供错误结果
+  * 优先级：属于问题的业务层面，如果优先级很高，可能会受到问题的严重影响
+
+### 13、如何影响别人
+
+* 项目经理不需要提供所有建议和解决方案，你有责任让团队解决问题，而不是提供解决方案
+* 思考你能为组织带来的价值
+* 发现其他人或团队的驱动力
+* 项目经理和负责人共同面对问题
+  * 项目经理能够友善开放地接受他们的建议和想法
+  * 如果你直接告诉别人怎么做，他们会有千千万万个理由告诉你“你错了”
+  * 如果让他们自己去找答案，他们会更容易去解决问题
+* 倾听团队
+  * 团队会告诉你要怎样才能达到最高工作效率
+* 在讨论时给他人思考的时间
+  * 在推行你的想法时，要允许别人思考和质疑你的想法
+* 不要固执己见
+  * 你可以把自己的想法做为解决某个问题的起点
+
