第九章完成

--- a/项目管理修炼之道.md
+++ b/项目管理修炼之道.md
@@ -1125,3 +1125,102 @@
 * 不要固执己见
   * 你可以把自己的想法做为解决某个问题的起点
 
+### 14、小结
+
+* 作为项目经理，你要带头考虑使用或调整哪些管理实践
+* 评估项目的问题，然后根据这些问题来判断使用或调整哪些实践
+* 要寻找可以建立和维持项目节奏的实践
+
+
+
+## 九、保持项目节奏
+
+### 1、在项目中使用持续集成
+
+* 持续集成：开发人员花1-2个小时编写一段代码，对其进行编译、测试、复查、构建，运行冒烟测试，并验证不会破坏现有的系统，再将其签入代码库
+* 按阶段集成：开发人员只有在完成了某个功能的代码后才将其签入
+* 频繁构建可以为开发人员提供反馈，同时让项目经理了解项目状态
+
+### 2、为构建创建自动化冒烟测试
+
+* 自动化冒烟测试，团队就可以知道是不是有人破坏了当前构建版本
+
+### 3、按功能实现，而不是按架构
+
+* 按功能进行实现和测试
+* 产品的架构反应组织结构
+* 按架构进行实现的坏处
+  * 除非等到整个产品集成完毕，项目经理很难知道开发完的功能是否可以正常工作
+  * 如果以架构为导向，产品中包含的组件就越多，这会阻止人们协同工作，并减缓项目进度
+  * 难以完成完整的功能，随着工作的进行，他们也丧失了重构系统使之具备更高内聚性的机会
+* 首先实现具有最高价值的功能
+  * 先实现最优价值的功能
+  * 把风险最高的功能往后放一放
+* 按功能测试
+  * 测试人员会按功能进行测试
+  * 为了按功能测试，需要构建跨架构的团队
+
+### 4、多几只眼睛盯着产品
+
+* 邀请团队成员相互复查工作，形式不限
+  * 结对编程
+  * 伙伴复查
+  * 同行评审
+  * 走查
+  * 正式代码检查
+* 维持检查很困难，因为检查会会打乱每个人的节奏还有项目的节奏
+
+### 5、准备重构
+
+* 重构是对代码的简化，无论是产品代码还是测试代码
+  * 重构不等于重新设计，知识简化而已
+* 如果不准备在项目快结束时进行重构，代码量会居高不下
+* 如果让重构和开发同时进行，重构的成本是非常小的
+
+### 6、通过用例、用户故事、角色和场景来定义需求
+
+* 减少不必要的代码的方法，想想谁会使用系统，又该如何开发用户需要的系统
+* 需求收集的方法应该为项目团队提供上下文，这样才能深入理解需求
+* 不要太过于专注于系统的内部功能，把希望捕获的用户重新排序，多想想应该为他们提供什么样的产品
+
+### 7、分离需求和GUI设计
+
+* GUI设计是要体现GUI如何引导客户使用系统来解决他们的问题
+* GUI是设计，不是需求
+
+### 8、尽可能使用低保真度原型
+
+* 纸上的原型可以节省时间
+* 高保真度原型会限制反馈，人们更愿意在纸面上考虑更多选择
+* 纸上的原型可以帮助人们看到流程并做出评价
+
+### 9、小结
+
+* 项目经理可以邀请团队成员考虑这些实践，不过你不能强迫他们采纳这些实践
+* 如果项目经理即使尽全力也只能选择一个实践，推荐选择持续集成
+* 项目经理采纳和调整的实践要有助于保持项目的节奏，允许项目提供启动和结束的速度
+
+
+
+## 十、管理会议
+
+发现并摧毁浪费时间的会议，要让团队将注意力集中在项目上，保护团队不受外界干扰和影响
+
+### 1、取消这些会议
+
+* 不需要你解决问题的会议
+  * 很多组织每周都有一些“状态报告”之类的会议，如果不需要你参与决策或是解决问题，这样的会议就不必参加
+* 绝对不要举行多人参加的顺序式进度报告会议
+  * 除发言人和项目经理之外，每个人都觉得很无聊
+  * 顺序式进度报告会议不是会议，更像是一种注重形式的仪式
+  * 改进实践：
+    - 每日站立会议
+    - 每周一对一会议
+    - 每周的电子邮件进度报告
+* 没有存在理由的会议
+  * 有些会议似乎从远古时代就已经存在了
+  * 会议最早的负责人早已离开原来的职位
+  * 最初召开的意图已经消失不见，剩下的只有会议
+* 没有会后行动的会议
+* 上层主管的顺序式进度报告会议
+  * 掠过这些会议，用电子邮件告知别人你的工作进度
