第十章完成

--- a/项目管理修炼之道.md
+++ b/项目管理修炼之道.md
@@ -1223,4 +1223,89 @@
   * 最初召开的意图已经消失不见，剩下的只有会议
 * 没有会后行动的会议
 * 上层主管的顺序式进度报告会议
-  * 掠过这些会议，用电子邮件告知别人你的工作进度
+  * 掠过这些会议，用电子邮件告知主管你的工作进度
+
+### 2、举行下列会议
+
+* 项目启动会议
+  * 为整个项目设定积极的基调
+  * 如果章程还未确定，和团队成员一起编写项目的章程
+  * 如果章程已经编写，那就和大家把章程过一遍
+* 发布版本规划会议
+  * 规划出希望一个迭代交付哪些功能
+    * 用规划扑克来估算功能的相对大小
+    * 客户或产品负责人就要对功能进行排序
+  * 重新排序产品待办事项列表
+  * 会议结束成果：
+    * 对于完成的定义
+    * 可能的发布日期
+    * 已经按迭代组织好并且有工作量预估的待开发功能列表
+* 进度报告会议
+  * 每日站立会议
+    * 我昨天完成了什么
+    * 我今天计划要做什么
+    * 我面临哪些障碍
+  * 每周的一对一会议
+    * 问候
+    * 讨论进度和状态
+    * 讨论他们的障碍
+    * 复查所有的行动计划
+  * 通过可见的方式了解进度
+    * 让团队成员说明他们的工作进度，包括他们下周要做的工作以及他们如何跟踪进度
+    * 要求大家将任务分解成“小石子”级别的待办事项列表
+  * 每周的电子邮件进度报告
+    * 如果有每日站立会议，不必从团队成员那里获取每周进度报告
+      * 工作成果：过去一周完成的工作
+      * 未来里程碑：任务描述、规划完成时间、预计完成时间、实际完成时间
+      * 障碍
+  * 向管理层报告进度
+    * 定期为管理层提供数据也许可以阻止他们管理的过死
+    * 迭代结束时给管理层发送进度报告
+* 项目团队会议
+  * 要将项目团队会议作为解决问题的会议，而不是为了报告进度
+  * 提纲
+    * 议题、时间、地点
+    * 期望与会人员
+    * 主要里程碑检查
+    * 本周遇到的问题
+    * 其他话题
+    * 回顾以往行动计划
+* 迭代审查会议
+  * 迭代尾声，团队会向产品负责人展示工作成果
+  * 可以随工作推进不断检视并调整工作方式
+
+### 3、会议疑难问题解答
+
+* 每日站立会议超过15分钟
+  * 保证大家都站着开会
+* 报告正在进行中的工作
+  * 将任务分解成“小石子”，确保报告已经完成的工作
+* 没人能够及时参会
+  * 重新商议一个时间
+* 没人能在下次会议前完成各自负责的行动计划
+  * 确保会后24小时内向大家发送会议记录
+  * 如果有行动计划，写明每项行动的负责人和截止日期
+* 与项目无关的人希望参加团队会议
+  * 找出原因，为他设立一个角色
+  * 如果有资深主管希望“帮助”团队更快完成工作
+    * 让他看看项目仪表板，确保这位主管已经了解团队的速度以及团队成员的各自角色
+  * 如果有主管希望通过“激励”团队来“帮助”大家
+    * 可以告诉他：知识工作者的激励来自于内部，而不是源于外部
+    * 给他几分钟时间，让他在会上讲几句，然后请他离场
+  * 如果还有主管想旁听你的会议
+    * 为他设立一个“观察员”的角色吧
+  * 项目经理有时需要邀请其他人参加会议，好从他那里获得对于决策的意见或是收集数据，使得项目团队可以做出更好的决策
+    * 会前说明这些人的职责，以及你将如何采用他们的意见
+* 管理与远程团队的电话会议
+  * 每个地点都会有一个引导人
+  * 作介绍，各方介绍自己的名称和角色
+  * 一次只允许一个人发言
+  * 如果提到某个人，明确说出对方名字
+  * 不要吃东西
+  * 如需翻译，首先设定基本规则（说完一句话再翻译）
+
+### 4、小结
+
+* 你以判断一次会议对你是否有价值，知否值得你活着任何团队成员的时间
+* 要想逃避瘟疫一样逃避顺序式进度报告会议
+* 观察会议进程，看看是不是能够满足每名参会者的需要
