--- a/项目管理修炼之道.md
+++ b/项目管理修炼之道.md
@@ -43,7 +43,7 @@
 * 为什么想要得到这样的结果？
 * 这种解决方案对你来说价值何在？
 * 这个系统要解决什么样的问题？
-* 这个系统可能会造成什么岩的问题？
+* 这个系统可能会造成什么样的问题？
 * 少用“为什么”、“怎么做”之类的问题
 
 ### 6、编写项目章程、共享现有决策
@@ -1081,7 +1081,7 @@
 ### 10、使用“小石子”
 
 * 如果要耗费很长时间才能完成一个任务，项目就会丧失节奏
-* 团队成员看不到人物结束的时候，他们就会变的懈怠，从而没有节奏感
+* 团队成员看不到任务结束的时候，他们就会变的懈怠，从而没有节奏感
 * 小石子可以帮助每个人保持自己的节奏，并让项目不致偏离正轨
 * 通过指导团队成员使用“小石子”估算任务，或是使用有时间盒限制的迭代，就可以控制“学生综合症”
   * 学生综合症：直到最后一刻，有时甚至超过了这个时刻，才开始某个任务的工作
@@ -1173,7 +1173,7 @@
 ### 5、准备重构
 
 * 重构是对代码的简化，无论是产品代码还是测试代码
-  * 重构不等于重新设计，知识简化而已
+  * 重构不等于重新设计，只是简化而已
 * 如果不准备在项目快结束时进行重构，代码量会居高不下
 * 如果让重构和开发同时进行，重构的成本是非常小的
 
@@ -1309,3 +1309,61 @@
 * 你以判断一次会议对你是否有价值，知否值得你活着任何团队成员的时间
 * 要想逃避瘟疫一样逃避顺序式进度报告会议
 * 观察会议进程，看看是不是能够满足每名参会者的需要
+
+
+
+## 十一、创建并使用项目仪表板
+
+要想真正掌握一个项目，关键在于经常进行测量，包括定性和定量两种方式，并且要将结果公之于众，这些测量数据构成了项目仪表板
+
+### 1、测量有风险
+
+测量会面临3个大问题：
+
+* 项目团队花费过多时间进行测量，从而影响正常工作
+  * 要是你想要很多人配合，还是先加强项目在一些基础设施上的支持
+* 人们不认真对待测量
+  * 要确保存在多种测量方式，以评估项目的真正进度
+  * 测量什么，得到什么
+* 测量人，而不是项目
+  * 如果测量的任何东西都可以直接跟踪到某个人身上，这等于是在对人，而不是项目
+  * 测量人就等于鼓励他们不认真对待测量
+
+### 2、根据项目完成度来衡量进度
+
+* 使用速度图表跟踪日程安排进度
+
+  ![速度图表](images/项目速度图.jpg)
+
+* 使用迭代内容图表跟踪总体进度
+
+  ![](images/迭代内容图.jpg)
+
+* 计算软件项目的挣值并无实际意义
+
+  * 挣值可以用来衡量到目前为止已完成工作的价值
+  * 然而软件总是不断发生变化，要想计算真正挣值，几乎不可能
+
+* 用EQF（估算质量因子）跟踪最初的估算
+
+  ![](images/估算质量因子.jpg)
+
+* 度量项目日程
+
+  * 失去的时间永远无法再回来
+
+  ![](images/估算日程和实际日程.jpg)
+
+* 人员分配情况
+
+![](images/计划人员安排与实际人员安排.jpg)
+
+* 判断项目变化率
+  * 基于模块间接口的变化情况判断需求变更的重要程度，只影响一个模块就是微小变更，影响多于一个模块就是重大变更
+
+    ![](images/需求变更图.jpg)
+
+    ​
+
+
+* ​
